--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,28 @@
     <title>Rick and Morty API JS</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <main>
-        
+    <div class="links-container">
+        <a href="index.html">
+            <picture class="logo">
+                <img src="./assets/img/logo.png" alt="rick and morty">
+            </picture>
+        </a>
+        <div class="redes-container">
+            <ul class="redes-list">
+                <a href="https://www.linkedin.com/in/emanuelfoschi/" class="redes" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/fdevvv" class="redes" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </ul>
+        </div>
+    </div>
+    <main class="container">
+        <div id="personajes-container"></div>
+
     </main>
+    <script src="./js/character.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="https://kit.fontawesome.com/004cfca51f.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
