--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="links-container">
-        <a href="index.html">
+        <a class="logo-container" href="index.html">
             <picture class="logo">
                 <img src="./assets/img/logo.png" alt="rick and morty">
             </picture>
@@ -23,13 +23,12 @@
             </ul>
         </div>
     </div>
-    <main class="container">
-        <div id="personajes-container"></div>
-
+    <main class="personajes-container container" id="personajes-container">
     </main>
-    <script src="./js/character.js"></script>
-    <script src="./js/app.js"></script>
+    <div id="buttons">
+    </div>
     <script src="https://kit.fontawesome.com/004cfca51f.js" crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
